# Fast-Search-Rust

./: Cargo.toml  README.md
.github/workflows/: build.yml
src/: lib.rs  main.rs
