[package]
name = "fast_search"
version = "0.1.0"
edition = "2024"

[dependencies]
walkdir = "2"
memmap2 = "0.9"
memchr = "2"
rayon = "1.7"
clap = { version = "4.5", features = ["derive"] }
aho-corasick = "1.1"
itoa = "1.0.17"
bytecount = "0.6.9"
ignore = "0.4.25"
snmalloc-rs = "0.3.8"
mpsc = "0.2.6"
thiserror = "2.0"
eframe = "0.32.1"
open = "5.1"
rfd = "0.17.2"


